# DemoAsCode

./: .gitignore  Cargo.toml  build.rs  package.json  pnpm-lock.yaml  tsconfig.json
cli-src/: main.ts
cli-src/engine/: telemetry-recorder.ts
cli-src/example/: playwright-web-test.ts
cli-src/types/: global.d.ts
post-processor/src/: lib.rs  main.rs
post-processor/tests/: pipeline_test.rs
