[package]
name = "demo-capture-postprocess"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "demo-capture-postprocess"
path = "post-processor/src/main.rs"

[dependencies]
fast_image_resize = { version = "6.0.0", features = ["image"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["io-util", "macros", "process", "rt-multi-thread"] }
